force-app/main/default/objects/Chosen_Product__c/Chosen_Product__c.object-meta.xml
<CustomObject>
    <description>Chosen Products for Calling Campaign</description>
    <label>Chosen Product</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Chosen Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chosen Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>