force-app/main/default/objects/Chosen_Product__c/fields/Calling_Campaign_Item__c.field-meta.xml
<CustomField>
    <fullName>Calling_Campaign_Item__c</fullName>
    <label>Calling Campaign Item</label>
    <referenceTo>Calling_Campaign__c</referenceTo>
    <relationshipName>Exchanged_Products</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>