force-app/main/default/objects/Chosen_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <inlineHelpText>Look for Sku or Name</inlineHelpText>
    <label>Product Name</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipName>Exchanged_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>