force-app/main/default/objects/Chosen_Product__c/fields/Unknown_Sku__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Sku__c</fullName>
    <description>Unknown Sku for Chosen Product</description>
    <label>Unknown Sku</label>
    <length>10</length>
    <type>Text</type>
</CustomField>