force-app/main/default/objects/Chosen_Product__c/validationRules/ChosenProduct_Sku_or_UnknownSku.validationRule-meta.xml
<ValidationRule>
    <fullName>ChosenProduct_Sku_or_UnknownSku</fullName>
    <active>true</active>
    <description>You have to complete the Sku or the Unknown sku</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
ISBLANK( Unknown_Sku__c),
ISBLANK( Product_Name__c )
)</errorConditionFormula>
    <errorMessage>You have to complete the Sku or the Unknown sku</errorMessage>
</ValidationRule>